--- a/.github/workflows/pica_crawler_actions.yml
+++ b/.github/workflows/pica_crawler_actions.yml
@@ -24,11 +24,11 @@ jobs:
           PICA_ACCOUNT: ${{secrets.PICA_ACCOUNT}}
           PICA_PASSWORD: ${{secrets.PICA_PASSWORD}}
           # 过滤分区 用,分隔
-          CATEGORIES: CG雜圖,全彩
+          CATEGORIES: 長篇,純愛
           # CATEGORIES_RULE 过滤规则    INCLUDE: 包含任意一个分区就下载  EXCLUDE: 包含任意一个分区就不下载
           CATEGORIES_RULE: INCLUDE
           # 订阅的关键词,会下载x天范围内上传的漫画    为空则关闭关键词订阅 用,分隔
-          SUBSCRIBE_KEYWORD: イスィ屋 (イスィ),
+          SUBSCRIBE_KEYWORD: だにまるstudio (だにまる)
           # 订阅的x天范围     git actions运行时填小一点,免得漫画过多邮箱推送不了,本地运行时随便填
           SUBSCRIBE_DAYS: 7
           # 允许在下载完成后发送自定义消息,为空则不发送 例: https://api.day.app/{your_keys}/picacg下载成功
